--- a/angular-example/src/app/info/info.component.html
+++ b/angular-example/src/app/info/info.component.html
@@ -1,3 +1,13 @@
-<p>
-  info works!
-</p>
+<section class="section">
+
+  <header class="section-header">
+  </header><!-- / section-header -->
+
+  <main class="section-main">
+
+
+
+
+  </main><!-- / sector-main -->
+
+</section><!-- / section -->
